Added more flexibility when adding index